--- a/index.html
+++ b/index.html
@@ -1,26 +1,146 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
+
 <body>
   <div class="page">
     <header class="header">
+      <img src="./images/logo_place_header.svg" alt="Логотип" class="header__logo_place">
+      <h1 class="header__title">Научиться учиться</h1>
+      <subtitle class="header__subtitle"> Какие современные и эффективные подходы к обучению вы можете использовать в
+        своей жизни? <a href="#">Узнать&rarr;</a></subtitle>
+      <div class="header__square-pic"></div>
+      <div class="header__main-illustration"></div>
 
     </header>
     <main class="content">
       <section class="description">
+        <div class="description__cover">
+          <a href="#" class="description__cover__brief">Главные проблемы в обучении</a>
+          <div class="description__cover__main-text">
+            <p class="description__cover__main-text_par">Ни в школе, ни в институте нас не учат тому, как правильно
+              изучать
+              материал. Мы готовимся к экзаменам и
+              учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
+              дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="description__cover__main-text_conc"><span class="description__cover__main-text_mark">Вывод:</span>
+              учиться тоже нужно уметь, но
+              почему-то
+              этому мало где учат. Что с этим делать?</p>
+            <p class="description__cover__main-text_par">Конкретные техники и упражнения помогают изменить подход к
+              обучению,
+              сделать его эффективным и
+              захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
+
       </section>
 
       <section class="digits">
+        <h2 class="section-title section-title_theme_white">Цифры и факты</h2>
+        <h3 class="section-subtitle ">Про учебу и мозг</h3>
+        <div class="table table_theme_white">
+          <div class="table__cell table_theme_white">
+            <h3 class="table__cell__heading">86 миллиардов</h3>
+            <p class="table__cell__text_int">Число нуждающихся в повышении квалификации</p>
+          </div>
+          <div class="table__cell table_theme_white">
+            <h3 class="table__cell__heading">2.1 миллиарда</h3>
+            <p class="table__cell__text_int">Число нуждающихся в повышении квалификации</p>
+            <p class="table__cell__text">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell table_theme_white">
+            <h3 class="table__cell__heading">1000 терабайт</h3>
+            <p class="table__cell__text_int">Объём памяти человека</p>
+          </div>
+          <div class="table__cell table_theme_white">
+            <h3 class="table__cell__heading">500 триллионов</h3>
+            <p class="table__cell__text_int">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </div>
+          <div class="table__cell table_theme_white">
+            <h3 class="table__cell__heading">420 миллионов</h3>
+            <p class="table__cell__text_int">Число взрослых людей моложе 25 лет, не имеющих образования для
+              трудоустройства</p>
+            <p class="table__cell__text">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell table_theme_white">
+            <h3 class="table__cell__heading">17–20 лет</h3>
+            <p class="table__cell__text_int">Пик обучаемости</p>
+          </div>
+          <div class="table__cell table_theme_white">
+            <h3 class="table__cell__heading">1885 год</h3>
+            <p class="table__cell__text_int">Открытие кривой забывания</p>
+          </div>
+          <div class="table__cell table_theme_white">
+            <h3 class="table__cell__heading">1889 год</h3>
+            <p class="table__cell__text_int">Открытие условного рефлекса</p>
+          </div>
+        </div>
+
       </section>
 
       <section class="feynman">
+        <div class="feynman__common">
+          <h1 class="feynman__common__title">Метод Фейнмана</h1>
+          <h3 class="feynman__common__subtitle">Выучить и не забыть.</h3>
+        </div>
+        <h3 class="feynman__link"><a href="#">Подробнее&rarr;</a></h3>
+        <img src="./images/feynman.png" alt="Фото Фейнмана" class="feynman__photo">
       </section>
 
       <section class="kaufman">
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+          <div class="table table_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__cell__heading">1</h3>
+            <p class="table__cell__text">Выберите привлекательный проект.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__cell__heading">2</h3>
+            <p class="table__cell__text">Сосредоточьтесь на каком-то одном навыке.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__cell__heading">3</h3>
+            <p class="table__cell__text">Определите целевой уровень мастерства.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__cell__heading">4</h3>
+            <p class="table__cell__text">Разбейте навык на элементы.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__cell__heading">5</h3>
+            <p class="table__cell__text">Приготовьте всё необходимое для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__cell__heading">6</h3>
+            <p class="table__cell__text">Устраните препятствия для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__cell__heading">7</h3>
+            <p class="table__cell__text">Выделите специальное время для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__cell__heading">8</h3>
+            <p class="table__cell__text">Создайте быстрые петли обратной связи.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__cell__heading">9</h3>
+            <p class="table__cell__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__cell__heading">10</h3>
+            <p class="table__cell__text">Уделяйте внимание количеству и скорости.</p>
+          </div>
+        </div>-->
+        <img src="./images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle">
       </section>
     </main>
     <footer class="footer">
@@ -28,4 +148,5 @@
     </footer>
   </div>
 </body>
+
 </html>
