--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
 <body>
   <div class="page">
     <header class="header">
-      <img src="./images/logo_place_header.svg" alt="Логотип" class="header__logo_place">
+      <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <subtitle class="header__subtitle"> Какие современные и эффективные подходы к обучению вы можете использовать в
-        своей жизни? <a href="#">Узнать&rarr;</a></subtitle>
+        своей жизни? <a href="#" class="page__link">Узнать&rarr;</a></subtitle>
       <div class="header__square-pic"></div>
       <div class="header__main-illustration"></div>
 
     </header>
     <main class="content">
       <section class="description">
-        <div class="description__cover">
-          <a href="#" class="description__cover__brief">Главные проблемы в обучении</a>
-          <div class="description__cover__main-text">
-            <p class="description__cover__main-text_par">Ни в школе, ни в институте нас не учат тому, как правильно
+        <div class="two-columns">
+          <h2 class="two-columns__brief"><a href="#" class="page__link">Главные проблемы в обучении</a></h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно
               изучать
               материал. Мы готовимся к экзаменам и
               учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
               дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="description__cover__main-text_conc"><span class="description__cover__main-text_mark">Вывод:</span>
+            <p class="two-columns__paragraph_conc"><span class="two-columns__span-accent">Вывод:</span>
               учиться тоже нужно уметь, но
               почему-то
               этому мало где учат. Что с этим делать?</p>
-            <p class="description__cover__main-text_par">Конкретные техники и упражнения помогают изменить подход к
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к
               обучению,
               сделать его эффективным и
               захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
@@ -47,38 +47,38 @@
         <h2 class="section-title section-title_theme_white">Цифры и факты</h2>
         <h3 class="section-subtitle ">Про учебу и мозг</h3>
         <div class="table table_theme_white">
-          <div class="table__cell table_theme_white">
+          <div class="table__cell">
             <h3 class="table__cell__heading">86 миллиардов</h3>
             <p class="table__cell__text_int">Число нуждающихся в повышении квалификации</p>
           </div>
-          <div class="table__cell table_theme_white">
+          <div class="table__cell">
             <h3 class="table__cell__heading">2.1 миллиарда</h3>
             <p class="table__cell__text_int">Число нуждающихся в повышении квалификации</p>
             <p class="table__cell__text">Всемирный Банк, 2017</p>
           </div>
-          <div class="table__cell table_theme_white">
+          <div class="table__cell">
             <h3 class="table__cell__heading">1000 терабайт</h3>
             <p class="table__cell__text_int">Объём памяти человека</p>
           </div>
-          <div class="table__cell table_theme_white">
+          <div class="table__cell">
             <h3 class="table__cell__heading">500 триллионов</h3>
             <p class="table__cell__text_int">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
-          <div class="table__cell table_theme_white">
+          <div class="table__cell">
             <h3 class="table__cell__heading">420 миллионов</h3>
             <p class="table__cell__text_int">Число взрослых людей моложе 25 лет, не имеющих образования для
               трудоустройства</p>
             <p class="table__cell__text">Всемирный Банк, 2017</p>
           </div>
-          <div class="table__cell table_theme_white">
+          <div class="table__cell">
             <h3 class="table__cell__heading">17–20 лет</h3>
             <p class="table__cell__text_int">Пик обучаемости</p>
           </div>
-          <div class="table__cell table_theme_white">
+          <div class="table__cell">
             <h3 class="table__cell__heading">1885 год</h3>
             <p class="table__cell__text_int">Открытие кривой забывания</p>
           </div>
-          <div class="table__cell table_theme_white">
+          <div class="table__cell">
             <h3 class="table__cell__heading">1889 год</h3>
             <p class="table__cell__text_int">Открытие условного рефлекса</p>
           </div>
@@ -91,14 +91,14 @@
           <h1 class="feynman__common__title">Метод Фейнмана</h1>
           <h3 class="feynman__common__subtitle">Выучить и не забыть.</h3>
         </div>
-        <h3 class="feynman__link"><a href="#">Подробнее&rarr;</a></h3>
+        <h3 class="feynman__link"><a href="#" class="page__link">Подробнее&rarr;</a></h3>
         <img src="./images/feynman.png" alt="Фото Фейнмана" class="feynman__photo">
       </section>
 
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
-          <div class="table table_theme_dark">
+        <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__cell__heading">1</h3>
             <p class="table__cell__text">Выберите привлекательный проект.</p>
@@ -139,12 +139,34 @@
             <h3 class="table__cell__heading">10</h3>
             <p class="table__cell__text">Уделяйте внимание количеству и скорости.</p>
           </div>
-        </div>-->
+        </div>
         <img src="./images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle">
       </section>
     </main>
     <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__columns_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <h3 class="footer__author">&copy;2022. Илья Бикметов</h3>
+        </div>
+        <div class="footer__columns_content_info">
+          <p class="footer__column-heading">О Практикуме</p>
+          <div class="footer__column-links">
+            <p class="footer__column-link"><a href="#" class="footer__link">Главная</a></p>
+            <p class="footer__column-link"><a href="#" class="footer__link">Концепция</a></p>
+            <p class="footer__column-link"><a href="#" class="footer__link">Наставники</a></p>
+          </div>
+        </div>
+        <div class="footer__columns_content_social">
+          <p class="footer__column-heading">Соцсети</p>
+          <div class="footer__column-links">
+            <p class="footer__column-link"><a href="#" class="footer__link"><img src="./images/facebook_color_white.svg" class="footer__social-icon">Facebook</a></p>
+            <p class="footer__column-link"><a href="#" class="footer__link"><img src="./images/vk_color_white.svg" class="footer__social-icon">ВКонтакте</a></p>
+            <p class="footer__column-link"><a href="#" class="footer__link"><img src="./images/instagram_color_white.svg" class="footer__social-icon">Instagram</a></p>
+          </div>
+        </div>
 
+      </div>
     </footer>
   </div>
 </body>
