--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
       </section>
 
       <section class="feynman">
-        <div class="feynman__common">
-          <h1 class="feynman__common__title">Метод Фейнмана</h1>
-          <h3 class="feynman__common__subtitle">Выучить и не забыть.</h3>
+        <div class="feynman__central">
+          <h1 class="feynman__title">Метод Фейнмана</h1>
+          <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
         </div>
         <h3 class="feynman__link"><a href="#" class="page__link">Подробнее&rarr;</a></h3>
         <img src="./images/feynman.png" alt="Фото Фейнмана" class="feynman__photo">
@@ -160,9 +160,12 @@
         <div class="footer__columns_content_social">
           <p class="footer__column-heading">Соцсети</p>
           <div class="footer__column-links">
-            <p class="footer__column-link"><a href="#" class="footer__link"><img src="./images/facebook_color_white.svg" class="footer__social-icon">Facebook</a></p>
-            <p class="footer__column-link"><a href="#" class="footer__link"><img src="./images/vk_color_white.svg" class="footer__social-icon">ВКонтакте</a></p>
-            <p class="footer__column-link"><a href="#" class="footer__link"><img src="./images/instagram_color_white.svg" class="footer__social-icon">Instagram</a></p>
+            <p class="footer__column-link"><a href="#" class="footer__link"><img src="./images/facebook_color_white.svg"
+                  class="footer__social-icon">Facebook</a></p>
+            <p class="footer__column-link"><a href="#" class="footer__link"><img src="./images/vk_color_white.svg"
+                  class="footer__social-icon">ВКонтакте</a></p>
+            <p class="footer__column-link"><a href="#" class="footer__link"><img
+                  src="./images/instagram_color_white.svg" class="footer__social-icon">Instagram</a></p>
           </div>
         </div>
 
