--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header class="header">
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
-      <subtitle class="header__subtitle"> Какие современные и эффективные подходы к обучению вы можете использовать в
-        своей жизни? <a href="#" class="page__link">Узнать&rarr;</a></subtitle>
+      <h3 class="header__subtitle"> Какие современные и эффективные подходы к обучению вы можете использовать в
+        своей жизни? <a href="#" class="page__link">Узнать&rarr;</a></h3>
       <div class="header__square-pic"></div>
       <div class="header__main-illustration"></div>
 
@@ -88,7 +88,7 @@
 
       <section class="feynman">
         <div class="feynman__central">
-          <h1 class="feynman__title">Метод Фейнмана</h1>
+          <h2 class="feynman__title">Метод Фейнмана</h2>
           <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
         </div>
         <h3 class="feynman__link"><a href="#" class="page__link">Подробнее&rarr;</a></h3>
@@ -161,11 +161,12 @@
           <p class="footer__column-heading">Соцсети</p>
           <div class="footer__column-links">
             <p class="footer__column-link"><a href="#" class="footer__link"><img src="./images/facebook_color_white.svg"
-                  class="footer__social-icon">Facebook</a></p>
+                  alt="Ссылка Facebook" class="footer__social-icon">Facebook</a></p>
             <p class="footer__column-link"><a href="#" class="footer__link"><img src="./images/vk_color_white.svg"
-                  class="footer__social-icon">ВКонтакте</a></p>
+                  alt="Ссылка Вконтакте" class="footer__social-icon">ВКонтакте</a></p>
             <p class="footer__column-link"><a href="#" class="footer__link"><img
-                  src="./images/instagram_color_white.svg" class="footer__social-icon">Instagram</a></p>
+                  src="./images/instagram_color_white.svg" alt="Ссылка Instagram"
+                  class="footer__social-icon">Instagram</a></p>
           </div>
         </div>
 
