--- a/index.html
+++ b/index.html
@@ -154,6 +154,22 @@
         </div>
       </section>
 
+      <section class="khan">
+        <div class="khan__container">
+          <h3 class="khan__author">Салман Хан</h3>
+          <h2 class="khan__title">Весь мир - школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+            миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
+            смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <h4 class="khan__quote-author">Джордж Лукас</h4>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img src="./images/khan-book.jpg" class="khan__book-pic" alt="Фото книги">
+            <div><a href="#" class="khan__buy-link">Купить книгу &rarr;</a></div>
+          </div>
+        </div>
+      </section>
+
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
@@ -200,6 +216,18 @@
           </div>
         </div>
         <div class="kaufman__triangle"></div>
+      </section>
+
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+        <div class="resources__logo-zone">
+          <a href="#" class="resources__link"><img src="./images/logo/resources-arzamas.svg" alt="Лого арзамас" class="resources__logo"></a>
+          <a href="#" class="resources__link"><img src="./images/logo/resources-n1.svg" alt="Лого N+1" class="resources__logo"></a>
+          <a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg" class="resources__logo"></a>
+          <a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg" class="resources__logo"></a>
+
+        </div>
       </section>
 
     </main>
