--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img src="./images/khan-book.jpg" class="khan__book-pic" alt="Фото книги">
-            <div><a href="#" class="khan__buy-link">Купить книгу &rarr;</a></div>
+            <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
@@ -224,8 +224,8 @@
         <div class="resources__logo-zone">
           <a href="#" class="resources__link"><img src="./images/logo/resources-arzamas.svg" alt="Лого арзамас" class="resources__logo"></a>
           <a href="#" class="resources__link"><img src="./images/logo/resources-n1.svg" alt="Лого N+1" class="resources__logo"></a>
-          <a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg" class="resources__logo"></a>
-          <a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg" class="resources__logo"></a>
+          <a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg" alt="Лого стрелка" class="resources__logo"></a>
+          <a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg" alt="Лого полка" class="resources__logo"></a>
 
         </div>
       </section>
