--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle"> Какие современные и эффективные подходы к обучению вы можете использовать в
         своей жизни? <a href="#" class="header__link">Узнать &rarr;</a></p>
-      <div class="header__square-pic"></div>
+      <div class="rotation header__square-pic"></div>
       <img src="./images/header-image.png" alt="Главное фото" class="header__main-illustration">
     </header>
 
@@ -81,11 +81,9 @@
         <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
         <div class="video__iframes">
           <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player"
-            frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
           <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"
-            frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
         </div>
@@ -215,17 +213,21 @@
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <div class="kaufman__triangle"></div>
+        <div class="rotation kaufman__triangle"></div>
       </section>
 
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
         <div class="resources__logo-zone">
-          <a href="#" class="resources__link"><img src="./images/logo/resources-arzamas.svg" alt="Лого арзамас" class="resources__logo"></a>
-          <a href="#" class="resources__link"><img src="./images/logo/resources-n1.svg" alt="Лого N+1" class="resources__logo"></a>
-          <a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg" alt="Лого стрелка" class="resources__logo"></a>
-          <a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg" alt="Лого полка" class="resources__logo"></a>
+          <a href="#" class="resources__link"><img src="./images/logo/resources-arzamas.svg" alt="Лого арзамас"
+              class="resources__logo"></a>
+          <a href="#" class="resources__link"><img src="./images/logo/resources-n1.svg" alt="Лого N+1"
+              class="resources__logo"></a>
+          <a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg" alt="Лого стрелка"
+              class="resources__logo"></a>
+          <a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg" alt="Лого полка"
+              class="resources__logo"></a>
 
         </div>
       </section>
